# src/main/kotlin/com/wutsi/security/manager/dto/LoginRequest.kt
@@ -1,9 +1,14 @@
 package com.wutsi.security.manager.dto
 
+import javax.validation.constraints.NotBlank
 import kotlin.String
 
 public data class LoginRequest(
-    public val phoneNumber: String = "",
-    public val mfaToken: String = "",
-    public val verificationCode: String = ""
+    @get:NotBlank
+    public val type: String = "",
+    @get:NotBlank
+    public val username: String = "",
+    public val mfaToken: String? = null,
+    public val verificationCode: String? = null,
+    public val password: String? = null
 )
