# src/main/kotlin/com/wutsi/security/manager/endpoint/VerifyPasswordController.kt
@@ -2,23 +2,20 @@ package com.wutsi.security.manager.endpoint
 
 import com.wutsi.security.manager.`delegate`.VerifyPasswordDelegate
 import com.wutsi.security.manager.dto.VerifyPasswordRequest
-import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.PostMapping
 import org.springframework.web.bind.`annotation`.RequestBody
 import org.springframework.web.bind.`annotation`.RestController
 import javax.validation.Valid
-import kotlin.Long
 
 @RestController
 public class VerifyPasswordController(
     public val `delegate`: VerifyPasswordDelegate
 ) {
-    @PostMapping("/v1/passwords/{id}/verify")
+    @PostMapping("/v1/passwords/verify")
     public fun invoke(
-        @PathVariable(name = "id") id: Long,
         @Valid @RequestBody
         request: VerifyPasswordRequest
     ) {
-        delegate.invoke(id, request)
+        delegate.invoke(request)
     }
 }
